<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_brown_700"
    android:orientation="vertical"
    android:weightSum="8" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/principal_row_iv_imagen"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            android:src="@drawable/white_mushroom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/color_white"
            android:hint="@string/user"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/color_white"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" />

        <Button
            android:id="@+id/login_bt_login"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@drawable/dark_button_selector"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:gravity="bottom"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/login_pb_progress"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/login_bt_register"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/dark_button_selector"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>